--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./public/img/ms-icon-70x70.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--sss-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <title>Avada Health</title>
 </head>
 
@@ -12,4 +16,5 @@
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
+
 </html>
